--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <span>Email address</span>
           <span class="error none">Valid email required</span>
         </div>
-        <form action="">
+        <form>
           <input type="text" placeholder="email@company.com">
           <button class="subscribe" type="button">Subscribe to monthly newsletter</button>
         </form>
